--- a/css/lesson4.css
+++ b/css/lesson4.css
@@ -3,7 +3,7 @@
 }
 /*как выставить относительный пункт папкой выше?*/
 body {
-    background-image: url("img/wallpaper.jpeg");
+    background-image: url("../img/wallpaper.jpeg");
     background-repeat: repeat;
     background-position: top;
     background-attachment: fixed;
