--- a/css/lesson5.css
+++ b/css/lesson5.css
@@ -31,4 +31,19 @@ ul.slider {
 .up {
     position: relative;
     top: -318pt;
-
+}
+.sliderli {
+    display: block;
+}
+.slidercard {
+    background: url("../img/wallpaper.jpeg");
+    width: 100%;
+    height: auto;
+    max-width: 960px;
+    min-height: 160px;
+    background-repeat: no-repeat;
+    color: whitesmoke;
+    font-size: 3rem;
+    /*как правильно ставить фильтры на изображения, подключенные через CSS?*/
+    filter: blur(2.5);
+}
